Login screen done
Massive refactoring.

  * Convert to Java 17 preview for sealed types + switch goodness
  * Support IntelliJ, as refactoring is so much faster.  It was
    tough to the IntelliJ module configuration to work with tests
    in a different content root.  Commit IntelliJ configuration
    files (.idea and *.iml).
  * Split member handler into workload-specific classes.
  * Fix some of the problems identified by IntelliJ.
  * Implement password hashing.
  * Make member details suitable for public viewing
  * Document command-line handling of envvars
  * Make ChaCha class protected (no need to be public).
  * Tighten up member route predicates
  * Use template partials for consistent head and tail
  * Set pageTitle and menuitems attributes on views passed to templates.