@@ -1,3 +1,3 @@
 #!/bin/sh -e
 
-java -p mlib -m com.acsredux.adapter.web -r web/template &
+java --enable-preview -p mlib -m com.acsredux.adapter.web -r web/template &
